--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/maker-bundle": "^1.54",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
+        "symfony/serializer": "7.0.*",
         "symfony/yaml": "7.0.*"
     },
     "config": {
